# TD3-GPU-CUDA

./: .gitignore  .gitingnore  CMakeLists.txt  README.md  cuda_pattern_td_1.cu  cuda_pattern_td_2.cu  cuda_pattern_td_2_3d.cu  cuda_pattern_td_3.cu  cuda_td_1.cu  cuda_td_2.cu  cuda_td_3.cu  cuda_td_4.cu  cuda_td_5.cu  cuda_td_5_atomic.cu  cuda_td_atomic.cu  dataset.tgz  dummy.c  first.ppm  generate_vector_float.sh  generate_vector_int.sh  land.ppm  muraille-de-chine.ppm  rsync-to-grid5000.sh  rsync.sh  transformed_image.ppm  vector.raw  wb.h
